--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
   <article data-timings="">
     <ul>
 <li><p>The original dataset includes 9 variables, but you don&#39;t necessiraly know everything about the diamond you want to estimate. Diamond pricer allows you to select only the variables that you know, and recalculates a model in real-time to predict with these variables only.</p></li>
-<li><p>There is 362880 possible models.</p></li>
+<li><p>There are 362880 possible models.</p></li>
+<li><p>The app uses linear models, which are relatively fast to compute. Therefore, it makes more sense to compute the model corresponding to the user&#39;s selected variables on the fly than to precompute and store them all.</p></li>
 </ul>
 
   </article>
